# navidia_proj

./: .gitignore  CMakeLists.txt  README.md
src/: nvconfig.h  (+2 more)
src/DX9SDKSampleFramework/: CMakeLists.txt  D3DFile.h  D3DFont.h  D3DSaver.h  DX9SDKSampleFramework.h  d3dapp.cpp  d3dapp.h  d3denumeration.h  d3dfile.cpp  d3dsaver.cpp  d3dsettings.h  d3dutil.h  dxutil.cpp  dxutil.h  nv_dx9_sdk_sample_decl.h
src/DXUT/: CMakeLists.txt  DXUT.cpp  DXUT.h  DXUTExport.h  DXUTMesh.cpp  DXUTMesh.h  DXUTSettingsDlg.h  DXUTcamera.h  DXUTenum.cpp  DXUTenum.h  DXUTgui.h  DXUTmisc.cpp  DXUTmisc.h  DXUTsound.cpp  DXUTsound.h  DXUTwavefile.cpp  DXUTwavefile.h  SDKmisc.cpp  SDKmisc.h  dxstdafx.h
src/FFT/: CMakeLists.txt  FFT.h  PingPong.cpp  PingPong.h
src/NV_D3DCommon/: CMakeLists.txt  CommonFactory.cpp  CommonFactory.h  ConvolutionKernelFactory.cpp  ConvolutionKernelFactory.h  Counter.cpp  Counter.h  D3DDeviceAndHWInfo.cpp  D3DDeviceAndHWInfo.h  D3DDeviceStateFactory.cpp  D3DDeviceStateFactory.h  D3DDeviceStates.cpp  D3DDeviceStates.h  D3DGeometryStateBundle.cpp  D3DGeometryStateBundle.h  D3DStateBundle.cpp  D3DStateBundle.h  DXDiagNVUtil.cpp  DXDiagNVUtil.h  LagLocker.cpp  LagLocker.h  LoadXFile.cpp  LoadXFile.h  LowPassFilter2D.cpp  LowPassFilter2D.h  MatrixNode.cpp  MatrixNode.h  MinMaxAvg.cpp  MinMaxAvg.h  MouseUI.cpp  MouseUI.h  NV_D3DCommonDX9PCH.cpp  NV_D3DCommonDX9PCH.h  NV_D3DCommon_decl_.h  PIDController.cpp  PIDController.h  Plot.cpp  Plot.h  RenderTargetFactory.cpp  RenderTargetFactory.h  (+13 more)
src/NV_D3DMesh/: CMakeLists.txt  GeoIndexRing1Neighbors.cpp  GeoIndexRing1Neighbors.h  LoadPLYFile.cpp  LoadPLYFile.h  Mesh.cpp  Mesh.h  MeshBeingProcessed.cpp  MeshBeingProcessed.h  MeshGeoCreator.cpp  MeshGeoCreator.h  MeshProcessor.cpp  MeshProcessor.h  MeshSectionStitcher.cpp  MeshSectionStitcher.h  MeshVB.cpp  MeshVB.h  MeshVBDot3.cpp  MeshVBDot3.h  MeshVBUtils.cpp  MeshVBUtils.h  MeshVertex.h  MeshVertexDot3.h  NV_D3DMeshDX9PCH.cpp  NV_D3DMeshDX9PCH.h  NV_D3DMesh_decl.h  NormalsCalculator.cpp  NormalsCalculator.h  QuadVB.cpp  QuadVB.h  QuadVBVertex.cpp  QuadVBVertex.h  ShadowVolumeMesh.cpp  ShadowVolumeMesh.h  ShadowVolumeMeshVB.cpp  ShadowVolumeMeshVB.h  TangentSpaceUtils.cpp  TangentSpaceUtils.h  WingedEdgeMesh.cpp  WingedEdgeMesh.h
src/PBuffer/: CMakeLists.txt  PBuffer.h
src/examples/directx/: AtlasViewer.cpp  AtlasViewer.h  BumpyShinyVariations.cpp  BumpyShinyVariations.h  BumpyShinyVariationsApp.cpp  BumpyShinyVariationsApp.h  CMakeLists.txt  CSAATutorialApp.cpp  CSAATutorialApp.h  DeferredShading.cpp  DeferredShading.h  DeferredShadingApp.cpp  DeferredShadingApp.h  DepthOfField.cpp  DepthOfField.h  DepthOfFieldApp.cpp  DepthOfFieldApp.h  FilterBlit.cpp  FilterBlit.h  FilterBlitApp.cpp  FilterBlitApp.h  FresnelReflection.cpp  FresnelReflection.h  FresnelReflectionApp.cpp  FresnelReflectionApp.h  FrontBackRegisterApp.cpp  FrontBackRegisterApp.h  HDRTexture.cpp  HDRTexture.h  HLSL_Aniso.rc  HLSL_RainbowFogbow.cpp  HLSL_RainbowFogbow.h  HLSL_RainbowFogbow.rc  HLSL_SoftShadows.cpp  HLSL_SoftShadows.h  HLSL_SoftShadowsApp.cpp  HLSL_SoftShadowsApp.h  Mandelbrot.cpp  Mandelbrot.h  MandelbrotApp.cpp  (+67 more)
src/examples/gems1/: CMakeLists.txt  Caustics.cpp  CausticsSnell.cpp  text.cpp  texture.cpp
src/hdr/: CMakeLists.txt  hdrtexture.cpp  hdrtexture.h
src/nvIO/: CMakeLists.txt  NVMeshMender.h  nvMeshIO.h  nvMeshPreprocessor.cpp  nvMeshPreprocessor.h  nvObjIO.cpp  nvObjIO.h  nvObjReader.cpp  nvObjReader.h
src/nvTriStrip/: CMakeLists.txt  NvTriStrip.cpp  NvTriStrip.h  NvTriStripObjects.cpp  VertexCache.h
src/nv_GPUFilter/: Applicator.cpp  Applicator.h  CMakeLists.txt  GLManager.cpp  GLManager.h  GPUFilter.cpp  GPUFilter.h  GPUFilterData.cpp  GPUFilterData.h  MyGLShader.h  MyPBuffer.h  PreviewManager.cpp  PreviewManager.h  ShaderSrc.h  TestFilterData.h  build_shadersrc_header.pl  main.cpp  pbuffer.cpp  resource.h
src/nv_GPUFilter/shaders/: GrayBlit_fs.glsl  LABBlit_fs.glsl  RGBBlit_fs.glsl  Separable-Symmetric_fs.glsl  Separable-Symmetric_vs.glsl  standard_fs.glsl  standard_vs.glsl
src/nv_dds/: CMakeLists.txt  nv_dds.cpp  nv_dds.h
src/nv_image_processing/: AssertCG.h  AssertGL.h  Buffer.h  CMakeLists.txt  GaussFilter.cpp  GaussFilter.h  GaussFilter1D.cpp  GaussFilter1D.h  Image.h  ImageFilter.cpp  ImageFilter.h  ImageView.h  LoadOperator.cpp  LoadOperator.h  SaveOperator.h  SearchPath.h  ShaderManager.h  SinkOperator.h  SourceOperator.h  TwoPassGaussFilter.cpp  TwoPassGaussFilter.h  nv_image_processing_decl.h  wglPBufferARB.h  wglPixelFormatARB.h  wglRenderTextureARB.h  wglRenderTextureRectangleNV.h
src/nv_manip/: CMakeLists.txt  nv_manip.cpp  nv_manip.h  nv_manipdecl.h
src/nv_math/: CMakeLists.txt  affine_decomp.cpp  nv_algebra.cpp  nv_algebra.h  nv_math.h  nv_mathdecl.h
src/nv_nvb/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  nv_animation.cpp  nv_camera.cpp  nv_drawmodel_visitor.cpp  nv_factory.cpp  nv_file.cpp  nv_light.cpp  nv_material.cpp  nv_mesh.cpp  nv_model.cpp  nv_node.cpp  nv_node.h  nv_nvb.cpp  nv_nvb.h  nv_nvb.rc  nv_nvbfactory.cpp  nv_nvbfactory.h  nv_refcount.cpp  nv_scene.cpp  nv_texcoord_set.cpp  nv_texture.cpp  nv_visitor.cpp  resource.h
src/nv_nvbloader/: CMakeLists.txt  NVBBreaker.cpp  NVBBreaker.h  NVBBuffer.cpp  NVBBuffer.h  NVBContainer.cpp  NVBContainer.h  NVBCustomArray.cpp  NVBCustomArray.h  NVBFPU.h  NVBFile.cpp  NVBFile.h  NVBFormat.h  NVBLoader.h  NVBMemoryMacros.h  NVBString.cpp  NVBString.h  NVBTypes.h  NVBUtils.h  nv_attribute.cpp  nv_attribute.h  nv_nvb_loader_decl.h  nv_streams.cpp  nv_streams.h
src/nv_util/: CMakeLists.txt  nv_ase.cpp  nv_ase.h  nv_jpeg.cpp  nv_jpeg.h  nv_png.cpp  nv_tga.cpp  nv_tga.h  nv_unzip.cpp  nv_unzip.h  nv_util.cpp  nv_util.h  unzip.c  unzip.h
src/nvparse/: CMakeLists.txt  buildparsers.bat  rc1.0_register.h
src/nvthread/: CMakeLists.txt  ParallelFor.h  nvthread.cpp  nvthread.h
src/paramgl/: CMakeLists.txt  param.h  paramgl.cpp  paramgl.h
src/png/: CMakeLists.txt  array_texture.cpp  array_texture.h  data_path.cpp  data_path.h  nv_png.cpp  nv_png.h  nv_png_dec.h
src/subd/: CMakeLists.txt  shader.cpp  subd.h  tess.cpp
(+815 files in other folders)
