PROJECT(nvTriStrip)

SET(TriStrip_SRCS
    NvTriStrip.h NvTriStrip.cpp
	NvTriStripObjects.h NvTriStripObjects.cpp
	VertexCache.h)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
# targets
ADD_DEFINITIONS(-DNVTRISTRIP_EXPORTS)

IF(NVTRIPSTRIP_SHARED)
    ADD_DEFINITIONS(-DNVTRIPSTRIP_SHARED=1)
    ADD_LIBRARY(nvTripStrip SHARED ${TriStrip_SRCS})
ELSE(NVTRIPSTRIP_SHARED)
    ADD_LIBRARY(nvTripStrip ${TriStrip_SRCS})
ENDIF(NVTRIPSTRIP_SHARED)

TARGET_LINK_LIBRARIES(nvTripStrip ${LIBS})

INSTALL(TARGETS nvTripStrip
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib/static)
INSTALL(FILES NvTriStrip.h  DESTINATION include/nv_TripStrip)