PROJECT(nv_dds)

SET(NV_DDS_SRCS
    nv_dds.h
	nv_dds.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}) 
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../extern/)

# targets
ADD_DEFINITIONS(-DNV_DDS_EXPORTS)

IF(NV_DDS_SHARED)
    ADD_DEFINITIONS(-DNV_DDS_DLL=1)
    ADD_LIBRARY(nv_dds SHARED ${NV_DDS_SRCS})
ELSE(NV_DDS_SHARED)
    ADD_LIBRARY(nv_dds ${NV_DDS_SRCS})
ENDIF(NV_DDS_SHARED)

TARGET_LINK_LIBRARIES(nv_dds ${LIBS} opengl32.lib)


INSTALL(TARGETS nv_dds
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib/static)
INSTALL(FILES nv_dds.h DESTINATION include/nv_dds)