PROJECT(nv_manip)

SET(NV_MANIP_SRCS
    nv_manipdecl.h
	nv_manip.h 
	nv_manip.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${NV_SOURCE_DIR}/src/nv_math)
# targets
ADD_DEFINITIONS(-DNV_MANIP_EXPORTS)

IF(NV_MANIP_SHARED)
    ADD_DEFINITIONS(-DNV_MANIP_DLL=1)
    ADD_LIBRARY(nv_manip SHARED ${NV_MANIP_SRCS})
ELSE(NV_MANIP_SHARED)
    ADD_LIBRARY(nv_manip ${NV_MANIP_SRCS})
ENDIF(NV_MANIP_SHARED)

TARGET_LINK_LIBRARIES(nv_manip ${LIBS} nv_math)
INSTALL(TARGETS nv_manip
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib/static)
INSTALL(FILES nv_manipdecl.h nv_manip.h DESTINATION include/nv_manip)