PROJECT(paramgl)

SET(PARAM_SRCS
    param.h
	param.cpp
	paramgl.h
	paramgl.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})

# targets
ADD_DEFINITIONS(-DPRRAM_EXPORTS)

IF(PARAM_SHARED)
    ADD_DEFINITIONS(-DPARAM_SHARED=1)
    ADD_LIBRARY(paramgl SHARED ${PARAM_SRCS})
ELSE(PARAM_SHARED)
    ADD_LIBRARY(paramgl ${PARAM_SRCS})
ENDIF(PARAM_SHARED)

IF(GLUT_FOUND)
	TARGET_LINK_LIBRARIES(paramgl ${LIBS}  ${GLUT_LIBRARY})
ELSE (GLUT_FOUND)
	TARGET_LINK_LIBRARIES(paramgl ${LIBS}  ${GLUT_glut_LIBRARY} )
ENDIF(GLUT_FOUND)

INSTALL(TARGETS paramgl
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib/static)
INSTALL(FILES param.h paramgl.h DESTINATION include/paramgl)